# tiny-oidc

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
tiny-idp/: Cargo.toml
tiny-idp-ref/: README.md  package.json
tiny-idp-ref/keys/: tiny_idp_private.pem  tiny_idp_public.pem
tiny-idp-ref/src/: index.ts
tiny-idp-ref/src/controllers/: auth_controller.ts  configuration_controller.ts  introspect_controller.ts  jwks_controller.ts  login_controller.ts  token_controller.ts
tiny-idp-ref/src/models/: access_token.ts  auth_code.ts  context.ts  user.ts
tiny-idp-ref/src/services/: jwt_service.ts
tiny-idp-ref/src/views/: login.html
tiny-oidc/: Cargo.toml
tiny-rp/: README.md  package.json  pnpm-lock.yaml
tiny-rp/src/: index.ts
